# futures-prediction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: log-prompt.sh  run-test.sh
.claude/skills/feature-engineering/: SKILL.md
docs/: MODULES.md  notebook.md  results.md
docs/notes/: evaluation.md
prompts/: log.md
src/: evaluate.py  features.py  labels.py  load.py  split.py
src/models/: baseline.py  gbm.py  rf.py  svm.py
tests/: test_baseline.py  test_evaluate.py  test_features.py  test_gbm.py  test_labels.py  test_load.py  test_rf.py  test_split.py  test_svm.py
